--- a/Zadatak 1/index.html
+++ b/Zadatak 1/index.html
@@ -9,52 +9,52 @@
 </head>
 <body>
     <div class="header">
-        <h1>Our popular courses</h1>
-        <p>
+        <h1 class="header__title">Our popular courses</h1>
+        <p class="header__subtitle">
             As You Pour The First Glass Of Your Favourite Chianti Or Chardonnay And
             Settle Into An Intimate Friday Evening.
         </p>
     </div>
     <div class="container">
-        <div class="card">
-            <img src="img1.jpg" alt="img">
-            <div class="desc">
-                <h1>Basic Body Building</h1>
-                <span class="price">&dollar;140.00</span>
+        <div class="container__card">
+            <img class="container__img" src="img1.jpg" alt="img">
+            <div class="container__desc">
+                <h1 class="container__desc__title">Basic Body Building</h1>
+                <span class="container__desc__price">&dollar;140.00</span>
             </div>
-            <p>
+            <p class="container__text">
                 Lorem Ipsum is simply dummy text of the printing and typesetting industry. 
                 Lorem Ipsum has been the industry's standard dummy text ever since the 1500s
             </p>
-            <button>
+            <button class="container__button">
                 Apply Course
             </button>
         </div>
-        <div class="card">
-            <img src="img1.jpg" alt="img">
-            <div class="desc">
-                <h1>Intermediate Body Building</h1>
-                <span class="price">&dollar;200.00</span>
+        <div class="container__card">
+            <img class="container__img" src="img1.jpg" alt="img">
+            <div class="container__desc">
+                <h1 class="container__desc__title">Intermediate Body Building</h1>
+                <span class="container__desc__price">&dollar;200.00</span>
             </div>
-            <p>
+            <p class="container__text">
                 Lorem Ipsum is simply dummy text of the printing and typesetting industry. 
                 Lorem Ipsum has been the industry's standard dummy text ever since the 1500s
             </p>
-            <button>
+            <button class="container__button">
                 Apply Course
             </button>
         </div>
-        <div class="card">
-            <img src="img1.jpg" alt="img">
-            <div class="desc">
-                <h1>Advanced Body Building</h1>
-                <span class="price">&dollar;250.00</span>
+        <div class="container__card">
+            <img class="container__img" src="img1.jpg" alt="img">
+            <div class="container__desc">
+                <h1 class="container__desc__title">Advanced Body Building</h1>
+                <span class="container__desc__price">&dollar;250.00</span>
             </div>
-            <p>
+            <p class="container__text">
                 Lorem Ipsum is simply dummy text of the printing and typesetting industry. 
                 Lorem Ipsum has been the industry's standard dummy text ever since the 1500s
             </p>
-            <button>
+            <button class="container__button">
                 Apply Course
             </button>
         </div>
