--- a/Zadatak 3/index.html
+++ b/Zadatak 3/index.html
@@ -9,7 +9,7 @@
     <title>Zadatak 3</title>
 </head>
 <body>
-    <div class="img_container">
+    <div class="img__container">
     
     </div>
     <div class="title">
@@ -18,28 +18,28 @@
     <div class="button">
         GET STRATED!
     </div>
-    <div class="form_box">
-        <div class="fraction orange">
-            <i class="fa-solid fa-dollar-sign"></i>
-            <h2>BEST PRICES</h2>
-            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. 
+    <div class="form-box">
+        <div class="form-box__fraction form-box__fraction--orange">
+            <i class="fa-solid fa-dollar-sign form-box__icon"></i>
+            <h2 class="form-box__title">BEST PRICES</h2>
+            <p class="form-box__text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. 
             Lorem Ipsum has been Lorem Ipsum has been
             </p>
         </div>
-        <div class="fraction darkgrey">
-            <h2 id="middle">GET FREE QUOTE</h2>
-            <form>
-                <label for="name">Name</label><br>
-                <input type="text" id="name" name="name" placeholder="Enter name"><br>
-                <label for="email">Email</label><br>
-                <input type="email" id="email" name="email" placeholder="Enter email"><br>
-                <input type="submit" name="submit" id="submit" value="GET QUOTE">
+        <div class="form-box__fraction form-box__fraction--darkgrey">
+            <h2 class="form-box__title" id="middle">GET FREE QUOTE</h2>
+            <form class="form-box__form">
+                <label class="form-box__form__label" for="name">Name</label><br>
+                <input class="form-box__form__input__text" type="text" id="name" name="name" placeholder="Enter name"><br>
+                <label class="form-box__form__label" for="email">Email</label><br>
+                <input class="form-box__form__input__email" type="email" id="email" name="email" placeholder="Enter email"><br>
+                <input class="form-box__form__input__submit" type="submit" name="submit" id="submit" value="GET QUOTE">
             </form>
         </div>
-        <div class="fraction orange">
-            <i class="fa-solid fa-phone"></i>
-            <h2>24/7 SUPPORT</h2>
-            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. 
+        <div class="form-box__fraction form-box__fraction--orange">
+            <i class="fa-solid fa-phone form-box__icon"></i>
+            <h2 class="form-box__title">24/7 SUPPORT</h2>
+            <p class="form-box__text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. 
             Lorem Ipsum has been Lorem Ipsum has been
             </p>
         </div>
