--- a/Zadatak 4/index.html
+++ b/Zadatak 4/index.html
@@ -10,14 +10,14 @@
 </head>
 <body>
     <div class="header">
-        <h1>EVENT SCHEDULE</h1>
-        <h3>Here is our event schedule</h3>
-        <div class="line"></div>
+        <h1 class="header__title">EVENT SCHEDULE</h1>
+        <h3 class="header__subtitle">Here is our event schedule</h3>
+        <div class="header__line"></div>
     </div>
     <div class="menu">
-        <div class="button active">Day 1</div>
-        <div class="button">Day 2</div>
-        <div class="button">Day 3</div>
+        <div class="menu__button menu__button--active">Day 1</div>
+        <div class="menu__button">Day 2</div>
+        <div class="menu__button">Day 3</div>
     </div>
     <div class="text">
         <p>Contrary to popular belief, Lorem Ipsum is not simply random text. 
@@ -26,42 +26,42 @@
         </p>
     </div>
     <div class="content">
-        <div class="row">
-            <span class="time">09:30 AM</span>
-            <span class="bold">Registration</span>
-            <p class="desc">Contrary to popular belief, Lorem Ipsum is not simply random text.</p>
-            <hr>
+        <div class="content__row">
+            <span class="content__time">09:30 AM</span>
+            <span class="content__bold">Registration</span>
+            <p class="content__desc">Contrary to popular belief, Lorem Ipsum is not simply random text.</p>
+            <hr class="content__hr">
         </div>
-        <div class="row">
-            <span class="timeOther">10:00 AM</span>
-            <img src="img1.png" alt="img">
-            <span class="name"><span class="boldname">Keynote</span><i> Brenden Legros</i></span>
-            <span class="descOther">Contrary to popular belief, Lorem Ipsum is not simply random text.</span>
-            <hr>
+        <div class="content__row">
+            <span class="content__timeOther">10:00 AM</span>
+            <img class="content__img" src="img1.png" alt="img">
+            <span class="content__name"><span class="content__name--boldname">Keynote</span><i> Brenden Legros</i></span>
+            <span class="content__descOther">Contrary to popular belief, Lorem Ipsum is not simply random text.</span>
+            <hr class="content__hr">
         </div>
-        <div class="row">
-            <span class="timeOther">11:00 AM</span>
-            <img src="img1.png" alt="img">
-            <span class="name"><span class="boldname">Et Voluptatem</span><i> Huber Hirthe</i></span>
-            <span class="descOther">Contrary to popular belief, Lorem Ipsum is not simply random text.</span>
-            <hr>
+        <div class="content__row">
+            <span class="content__timeOther">11:00 AM</span>
+            <img class="content__img" src="img1.png" alt="img">
+            <span class="content__name"><span class="content__name--boldname">Et Voluptatem</span><i> Huber Hirthe</i></span>
+            <span class="content__descOther">Contrary to popular belief, Lorem Ipsum is not simply random text.</span>
+            <hr class="content__hr">
         </div>
-        <div class="row">
-            <span class="timeOther">12:00 AM</span>
-            <img src="img1.png" alt="img">
-            <span class="name"><span class="boldname">Exclipabo et</span><i> Cole Emerich</i></span>
-            <span class="descOther">Contrary to popular belief, Lorem Ipsum is not simply random text.</span>
-            <hr>
+        <div class="content__row">
+            <span class="content__timeOther">12:00 AM</span>
+            <img class="content__img" src="img1.png" alt="img">
+            <span class="content__name"><span class="content__name--boldname">Exclipabo et</span><i> Cole Emerich</i></span>
+            <span class="content__descOther">Contrary to popular belief, Lorem Ipsum is not simply random text.</span>
+            <hr class="content__hr">
         </div>
-        <div class="row last">
-            <span class="timeOther">02:00 PM</span>
-            <img src="img1.png" alt="img">
-            <span class="name"><span class="boldname">Qui non qui</span><i> Jack Christensen</i></span>
-            <span class="descOther">Contrary to popular belief, Lorem Ipsum is not simply random text.</span>
+        <div class="content__row content__row--last">
+            <span class="content__timeOther">02:00 PM</span>
+            <img class="content__img" src="img1.png" alt="img">
+            <span class="content__name"><span class="content__name--boldname">Qui non qui</span><i> Jack Christensen</i></span>
+            <span class="content__descOther">Contrary to popular belief, Lorem Ipsum is not simply random text.</span>
         </div>
     </div>
     <div class="up">
-        <i class="fa-solid fa-angle-up"></i>
+        <i class="fa-solid fa-angle-up up__icon"></i>
     </div>
 </body>
 </html>
