--- a/Zadatak 5/index.html
+++ b/Zadatak 5/index.html
@@ -13,140 +13,140 @@
 </head>
 <body>
     <div class="header">
-        <h3>WORK OF EXCELLENCE</h3>
-        <h1>RECENT PROJECTS</h1>
+        <h3 class="header__subtitle">WORK OF EXCELLENCE</h3>
+        <h1 class="header__title">RECENT PROJECTS</h1>
     </div>
     <div class="menu">
-        <div class="button active">SHOW ALL</div>
-        <div class="button">COMMERCIAL</div>
-        <div class="button">EDUCATION</div>
-        <div class="button">GOVERMENT</div>
-        <div class="button">INFRASTRUCTURE</div>
-        <div class="button">RESIDENTIAL</div>
-        <div class="button">HEALTH CARE</div>
+        <div class="menu__button menu__button--active">SHOW ALL</div>
+        <div class="menu__button">COMMERCIAL</div>
+        <div class="menu__button">EDUCATION</div>
+        <div class="menu__button">GOVERMENT</div>
+        <div class="menu__button">INFRASTRUCTURE</div>
+        <div class="menu__button">RESIDENTIAL</div>
+        <div class="menu__button">HEALTH CARE</div>
     </div>
     <div class="gallery">
-        <div class="row">
-            <div class="img_container">
-                <img src="img1.png" alt="img">
-                <div class="overlay">
-                    <div class="corner"><i class="fa-solid fa-plus"></i></div>
-                    <h3>CAPITAL TELTWAY BUILDING</h3>
-                    <div class="btn"><span>COMMERCIAL INTERIORS</span></div>
+        <div class="gallery__row">
+            <div class="gallery__img-container">
+                <img class="gallery__img" src="img1.png" alt="img">
+                <div class="gallery__overlay">
+                    <div class="gallery__overlay__corner"><i class="fa-solid fa-plus gallery__overlay__corner__icon"></i></div>
+                    <h3 class="gallery__overlay__title">CAPITAL TELTWAY BUILDING</h3>
+                    <div class="gallery__overlay__button"><span class="gallery__overlay__button--centred">COMMERCIAL INTERIORS</span></div>
                 </div>
             </div>
-            <div class="img_container">
-                <img src="img1.png" alt="img">
-                <div class="overlay">
-                    <div class="corner"><i class="fa-solid fa-plus"></i></div>
-                    <h3>CAPITAL TELTWAY BUILDING</h3>
-                    <div class="btn"><span>COMMERCIAL INTERIORS</span></div>
+            <div class="gallery__img-container">
+                <img class="gallery__img" src="img1.png" alt="img">
+                <div class="gallery__overlay">
+                    <div class="gallery__overlay__corner"><i class="fa-solid fa-plus gallery__overlay__corner__icon"></i></div>
+                    <h3 class="gallery__overlay__title">CAPITAL TELTWAY BUILDING</h3>
+                    <div class="gallery__overlay__button"><span class="gallery__overlay__button--centred">COMMERCIAL INTERIORS</span></div>
                 </div>
             </div>
-            <div class="img_container">
-                <img src="img1.png" alt="img">
-                <div class="overlay">
-                    <div class="corner"><i class="fa-solid fa-plus"></i></div>
-                    <h3>CAPITAL TELTWAY BUILDING</h3>
-                    <div class="btn"><span>COMMERCIAL INTERIORS</span></div>
+            <div class="gallery__img-container">
+                <img class="gallery__img" src="img1.png" alt="img">
+                <div class="gallery__overlay">
+                    <div class="gallery__overlay__corner"><i class="fa-solid fa-plus gallery__overlay__corner__icon"></i></div>
+                    <h3 class="gallery__overlay__title">CAPITAL TELTWAY BUILDING</h3>
+                    <div class="gallery__overlay__button"><span class="gallery__overlay__button--centred">COMMERCIAL INTERIORS</span></div>
                 </div>
             </div>
         </div>
-        <div class="row">
-            <div class="img_container">
-                <img src="img1.png" alt="img">
-                <div class="overlay">
-                    <div class="corner"><i class="fa-solid fa-plus"></i></div>
-                    <h3>CAPITAL TELTWAY BUILDING</h3>
-                    <div class="btn"><span>COMMERCIAL INTERIORS</span></div>
+        <div class="gallery__row">
+            <div class="gallery__img-container">
+                <img class="gallery__img" src="img1.png" alt="img">
+                <div class="gallery__overlay">
+                    <div class="gallery__overlay__corner"><i class="fa-solid fa-plus gallery__overlay__corner__icon"></i></div>
+                    <h3 class="gallery__overlay__title">CAPITAL TELTWAY BUILDING</h3>
+                    <div class="gallery__overlay__button"><span class="gallery__overlay__button--centred">COMMERCIAL INTERIORS</span></div>
                 </div>
             </div>
-            <div class="img_container">
-                <img src="img1.png" alt="img">
-                <div class="overlay">
-                    <div class="corner"><i class="fa-solid fa-plus"></i></div>
-                    <h3>CAPITAL TELTWAY BUILDING</h3>
-                    <div class="btn"><span>COMMERCIAL INTERIORS</span></div>
+            <div class="gallery__img-container">
+                <img class="gallery__img" src="img1.png" alt="img">
+                <div class="gallery__overlay">
+                    <div class="gallery__overlay__corner"><i class="fa-solid fa-plus gallery__overlay__corner__icon"></i></div>
+                    <h3 class="gallery__overlay__title">CAPITAL TELTWAY BUILDING</h3>
+                    <div class="gallery__overlay__button"><span class="gallery__overlay__button--centred">COMMERCIAL INTERIORS</span></div>
                 </div>
             </div>
-            <div class="img_container">
-                <img src="img1.png" alt="img">
-                <div class="overlay">
-                    <div class="corner"><i class="fa-solid fa-plus"></i></div>
-                    <h3>CAPITAL TELTWAY BUILDING</h3>
-                    <div class="btn"><span>COMMERCIAL INTERIORS</span></div>
+            <div class="gallery__img-container">
+                <img class="gallery__img" src="img1.png" alt="img">
+                <div class="gallery__overlay">
+                    <div class="gallery__overlay__corner"><i class="fa-solid fa-plus gallery__overlay__corner__icon"></i></div>
+                    <h3 class="gallery__overlay__title">CAPITAL TELTWAY BUILDING</h3>
+                    <div class="gallery__overlay__button"><span class="gallery__overlay__button--centred">COMMERCIAL INTERIORS</span></div>
                 </div>
             </div>
         </div>
     </div>
-    <div class="footer_container">
-        <div class="section">
-            <div class="col">
-                <div class="vertical_line"></div>
-                <div class="head">ABOUT US</div>
-                <div class="icon_machine"><i class="fa-solid fa-truck-ramp-box"></i><span class="constra"> CONSTRA</span></div>
-                <div class="description">Lorem Ipsum is simply dummy and typesetting industry.
+    <div class="footer-container">
+        <div class="footer-container__section">
+            <div class="footer-container__col">
+                <div class="footer-container__col__vertical-line"></div>
+                <div class="footer-container__col__head">ABOUT US</div>
+                <div class="footer-container__col__icon-machine"><i class="fa-solid fa-truck-ramp-box"></i><span class="footer-container__col__icon-machine__constra"> CONSTRA</span></div>
+                <div class="footer-container__col__description">Lorem Ipsum is simply dummy and typesetting industry.
                     text of the printing and typesetting industry.
                 </div>
-                <div class="icons">
-                    <i class="fa-brands fa-facebook"></i>
-                    <i class="fa-brands fa-instagram"></i>
-                    <i class="fa-brands fa-twitter"></i>
-                    <i class="fa-brands fa-google-plus-g"></i>
+                <div class="footer-container__col__icons">
+                    <i class="fa-brands fa-facebook footer-container__col__icons__logos"></i>
+                    <i class="fa-brands fa-instagram footer-container__col__icons__logos"></i>
+                    <i class="fa-brands fa-twitter footer-container__col__icons__logos"></i>
+                    <i class="fa-brands fa-google-plus-g footer-container__col__icons__logos"></i>
                 </div>
             </div>
-            <div class="col">
-                <div class="vertical_line"></div>
-                <div class="head">WORKING HOURS</div>
-                <div class="second_description">Lorem Ipsum is simply dummy and typesetting industry.
+            <div class="footer-container__col">
+                <div class="footer-container__col__vertical-line"></div>
+                <div class="footer-container__col__head">WORKING HOURS</div>
+                <div class="footer-container__col__second-description">Lorem Ipsum is simply dummy and typesetting industry.
                     text of the printing and typesetting industry.
                 </div>
-                <div class="working_hours">
+                <div class="footer-container__col__working_hours">
                     <span class="days">Monday - Friday:</span><span class="hours">10:00 - 16:00</span><br>
                 </div>
-                <div class="working_hours">
+                <div class="footer-container__col__working_hours">
                     <span class="days2">Saturday:</span><span class="hours2">12:00 - 15:00</span>
                 </div>
-                <div class="working_hours">
+                <div class="footer-container__col__working_hours">
                     <span class="days3">Sunday and holydays:</span><span class="hours3">09:00 - 12:00</span>
                 </div>
             </div>
-            <div class="col">
-                <div class="vertical_line"></div>
-                <div class="head">SERVICES</div>
-                <div class="term">
-                    <i class="fa-solid fa-angle-right"></i> Pre-construction
-                    <hr>
+            <div class="footer-container__col">
+                <div class="footer-container__col__vertical-line"></div>
+                <div class="footer-container__col__head">SERVICES</div>
+                <div class="footer-container__col__term">
+                    <i class="fa-solid fa-angle-right footer-container__col__term__icon"></i> Pre-construction
+                    <hr class="footer-container__col__term__hr">
                 </div>
-                <div class="term2">
-                    <i class="fa-solid fa-angle-right"></i> General Contracting
-                    <hr>
+                <div class="footer-container__col__term2">
+                    <i class="fa-solid fa-angle-right footer-container__col__term__icon"></i> General Contracting
+                    <hr class="footer-container__col__term__hr">
                 </div>
-                <div class="term3">
-                    <i class="fa-solid fa-angle-right"></i> Construction Management
-                    <hr>
+                <div class="footer-container__col__term3">
+                    <i class="fa-solid fa-angle-right footer-container__col__term__icon"></i> Construction Management
+                    <hr class="footer-container__col__term__hr">
                 </div>
-                <div class="term4">
-                    <i class="fa-solid fa-angle-right"></i> Design and Build
-                    <hr>
+                <div class="footer-container__col__term4">
+                    <i class="fa-solid fa-angle-right footer-container__col__term__icon"></i> Design and Build
+                    <hr class="footer-container__col__term__hr">
                 </div>
-                <div class="term5">
-                    <i class="fa-solid fa-angle-right"></i> Self-Perform Construction
-                    <hr>
+                <div class="footer-container__col__term5">
+                    <i class="fa-solid fa-angle-right footer-container__col__term__icon"></i> Self-Perform Construction
+                    <hr class="footer-container__col__term__hr">
                 </div>
             </div>
         </div>
-        <div class="footer">
-            <span class="copyright">Copyright &copy; 2019 a theme by themefisher.com</span>
-            <div class="footer_menu">
-                <span class="footer_button">About</span>
-                <span class="footer_button">Our people</span>
-                <span class="footer_button">Faq</span>
-                <span class="footer_button">Blog</span>
-                <span class="footer_button">Pricing</span>
+        <div class="footer-container__footer">
+            <span class="footer-container__copyright">Copyright &copy; 2019 a theme by themefisher.com</span>
+            <div class="footer-container__footer-menu">
+                <span class="footer-container__footer-menu__button">About</span>
+                <span class="footer-container__footer-menu__button">Our people</span>
+                <span class="footer-container__footer-menu__button">Faq</span>
+                <span class="footer-container__footer-menu__button">Blog</span>
+                <span class="footer-container__footer-menu__button">Pricing</span>
             </div>
-            <div class="arrow_up">
-                <i class="fa-solid fa-angles-up"></i>
+            <div class="footer-container__footer__arrow-up">
+                <i class="fa-solid fa-angles-up footer-container__footer__arrow-up__icon"></i>
             </div>
         </div>
     </div>
