--- a/Zadatak 2/index.html
+++ b/Zadatak 2/index.html
@@ -10,50 +10,50 @@
 </head>
 <body>
     <div class="row">
-        <div class="card">
-            <img src="img1.jpg" alt="bridge">
-            <div class="subcard">
-                <h2>How to recover the cutting edge</h2>
-                <p><i class="fa fa-calendar"></i> Monday, 8 Am - Tuesday, 8 Pm</p>
-                <p><i class="fa fa-crosshairs"></i> <span>Spring church</span></p>
-                <p><i class="fa fa-building"></i> 203 fake St. Mountain View, San Francisco, California, USA</p>
-                <button>Read more</button>
+        <div class="row__card">
+            <img class="row__img" src="img1.jpg" alt="bridge">
+            <div class="row__subcard">
+                <h2 class="row__subcard__title">How to recover the cutting edge</h2>
+                <p class="row__subcard__text"><i class="fa fa-calendar"></i> Monday, 8 Am - Tuesday, 8 Pm</p>
+                <p class="row__subcard__text"><i class="fa fa-crosshairs"></i> <span class="row__subacard__text--colored">Spring church</span></p>
+                <p class="row__subcard__text"><i class="fa fa-building"></i> 203 fake St. Mountain View, San Francisco, California, USA</p>
+                <button class="row__subcard__button">Read more</button>
             </div>
         </div>
-        <div class="card">
-            <img src="img1.jpg" alt="bridge">
-            <div class="subcard">
-                <h2>How to recover the cutting edge</h2>
-                <p><i class="fa fa-calendar"></i> Monday, 8 Am - Tuesday, 8 Pm</p>
-                <p><i class="fa fa-crosshairs"></i> <span>Spring church</span></p>
-                <p><i class="fa fa-building"></i> 203 fake St. Mountain View, San Francisco, California, USA</p>
-                <button>Read more</button>
+        <div class="row__card">
+            <img class="row__img" src="img1.jpg" alt="bridge">
+            <div class="row__subcard">
+                <h2 class="row__subcard__title">How to recover the cutting edge</h2>
+                <p class="row__subcard__text"><i class="fa fa-calendar"></i> Monday, 8 Am - Tuesday, 8 Pm</p>
+                <p class="row__subcard__text"><i class="fa fa-crosshairs"></i> <span class="row__subacard__text--colored">Spring church</span></p>
+                <p class="row__subcard__text"><i class="fa fa-building"></i> 203 fake St. Mountain View, San Francisco, California, USA</p>
+                <button class="row__subcard__button">Read more</button>
             </div>
         </div>
-        <div class="card">
-            <img src="img1.jpg" alt="bridge">
-            <div class="subcard">
-                <h2>How to recover the cutting edge</h2>
-                <p><i class="fa fa-calendar"></i> Monday, 8 Am - Tuesday, 8 Pm</p>
-                <p><i class="fa fa-crosshairs"></i> <span>Spring church</span></p>
-                <p><i class="fa fa-building"></i> 203 fake St. Mountain View, San Francisco, California, USA</p>
-                <button>Read more</button>
+        <div class="row__card">
+            <img class="row__img" src="img1.jpg" alt="bridge">
+            <div class="row__subcard">
+                <h2 class="row__subcard__title">How to recover the cutting edge</h2>
+                <p class="row__subcard__text"><i class="fa fa-calendar"></i> Monday, 8 Am - Tuesday, 8 Pm</p>
+                <p class="row__subcard__text"><i class="fa fa-crosshairs"></i> <span class="row__subacard__text--colored">Spring church</span></p>
+                <p class="row__subcard__text"><i class="fa fa-building"></i> 203 fake St. Mountain View, San Francisco, California, USA</p>
+                <button class="row__subcard__button">Read more</button>
             </div>
         </div>
-        <div class="card">
-            <img src="img1.jpg" alt="bridge">
-            <div class="subcard">
-                <h2>How to recover the cutting edge</h2>
-                <p><i class="fa fa-calendar"></i> Monday, 8 Am - Tuesday, 8 Pm</p>
-                <p><i class="fa fa-crosshairs"></i> <span>Spring church</span></p>
-                <p><i class="fa fa-building"></i> 203 fake St. Mountain View, San Francisco, California, USA</p>
-                <button>Read more</button>
+        <div class="row__card">
+            <img class="row__img" src="img1.jpg" alt="bridge">
+            <div class="row__subcard">
+                <h2 class="row__subcard__title">How to recover the cutting edge</h2>
+                <p class="row__subcard__text"><i class="fa fa-calendar"></i> Monday, 8 Am - Tuesday, 8 Pm</p>
+                <p class="row__subcard__text"><i class="fa fa-crosshairs"></i> <span class="row__subacard__text--colored">Spring church</span></p>
+                <p class="row__subcard__text"><i class="fa fa-building"></i> 203 fake St. Mountain View, San Francisco, California, USA</p>
+                <button class="row__subcard__button">Read more</button>
             </div>
         </div>
     </div>
     <div class="footer">
-        <span>Events</span>
-        <h1>UPCOMING EVENTS</h1>
+        <span class="footer__word">Events</span>
+        <h1 class="footer__title">UPCOMING EVENTS</h1>
     </div>
 </body>
 </html>
