--- a/Zadatak 6/index.html
+++ b/Zadatak 6/index.html
@@ -11,12 +11,12 @@
 </head>
 <body>
     <div class="box">
-        <p class="top">We create for you</p>
-        <h1>Entrust Your Project to Our Best Team of Professionals</h1>
-        <p class="bot">Have any project on mind? For immidiate support:</p>
-        <div class="number">
-            <i class="fa-solid fa-mobile-screen"></i>
-            <span>+23 876 65 455</span>
+        <p class="box__top">We create for you</p>
+        <h1 class="box__title">Entrust Your Project to Our Best Team of Professionals</h1>
+        <p class="box__bot">Have any project on mind? For immidiate support:</p>
+        <div class="box__number">
+            <i class="fa-solid fa-mobile-screen box__icon"></i>
+            <span class="box__num">+23 876 65 455</span>
         </div>
     </div>
 </body>
