--- a/Zadatak 7/index.html
+++ b/Zadatak 7/index.html
@@ -12,43 +12,43 @@
 </head>
 <body>
     <div class="header">
-        <p>WE ARE SPECIALIST IN</p>
-        <h1>WHAT WE DO</h1>
+        <p class="header__subtitle">WE ARE SPECIALIST IN</p>
+        <h1 class="header__title">WHAT WE DO</h1>
     </div>
     <div class="container">
-        <div class="col content">
-            <div class="cnt">
-                <i class="fa-solid fa-city"></i>
-                <h4>HOME CONSTRUCTION</h4>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, ipsum dolor sit amet.</p>
+        <div class="container__col container__content">
+            <div class="container__cnt">
+                <i class="fa-solid fa-city container__cnt__icon"></i>
+                <h4 class="container__cnt__title">HOME CONSTRUCTION</h4>
+                <p class="container__cnt__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, ipsum dolor sit amet.</p>
             </div>
-            <div class="cnt">
-                <i class="fa-solid fa-toilets-portable"></i>
-                <h4>BUILDING REMODELS</h4>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, ipsum dolor sit amet.</p>
+            <div class="container__cnt">
+                <i class="fa-solid fa-toilets-portable container__cnt__icon"></i>
+                <h4 class="container__cnt__title">BUILDING REMODELS</h4>
+                <p class="container__cnt__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, ipsum dolor sit amet.</p>
             </div>
-            <div class="cnt">
-                <i class="fa-solid fa-people-roof"></i>
-                <h4>INTERIOR DESIGN</h4>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, ipsum dolor sit amet.</p>
+            <div class="container__cnt">
+                <i class="fa-solid fa-people-roof container__cnt__icon"></i>
+                <h4 class="container__cnt__title">INTERIOR DESIGN</h4>
+                <p class="container__cnt__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, ipsum dolor sit amet.</p>
             </div>
         </div>
-        <div class="col image"></div>
-        <div class="col content">
-            <div class="cnt">
-                <i class="fa-solid fa-pen-ruler"></i>
-                <h4>EXTERIOR DESIGN</h4>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, ipsum dolor sit amet.</p>
+        <div class="container__col container__image"></div>
+        <div class="container__col container__content">
+            <div class="container__cnt">
+                <i class="fa-solid fa-pen-ruler container__cnt__icon"></i>
+                <h4 class="container__cnt__title">EXTERIOR DESIGN</h4>
+                <p class="container__cnt__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, ipsum dolor sit amet.</p>
             </div>
-            <div class="cnt">
-                <i class="fa-solid fa-truck"></i>
-                <h4>RENOVATION</h4>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, ipsum dolor sit amet.</p>
+            <div class="container__cnt">
+                <i class="fa-solid fa-truck container__cnt__icon"></i>
+                <h4 class="container__cnt__title">RENOVATION</h4>
+                <p class="container__cnt__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, ipsum dolor sit amet.</p>
             </div>
-            <div class="cnt">
-                <i class="fa-solid fa-building-shield"></i>
-                <h4>SAFETY MANAGEMENT</h4>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, ipsum dolor sit amet.</p>
+            <div class="container__cnt">
+                <i class="fa-solid fa-building-shield container__cnt__icon"></i>
+                <h4 class="container__cnt__title">SAFETY MANAGEMENT</h4>
+                <p class="container__cnt__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, ipsum dolor sit amet.</p>
             </div>
         </div>
     </div>
